Fix command list column count not being selected properly according to the resolution, resulting in unreadable command blocks

--- a/src/routes/commands/commands.css
+++ b/src/routes/commands/commands.css
@@ -1,6 +1,8 @@
 .command {
     display: inline-block;
     width: 100%;
+    margin-bottom: 8px;
+    margin-top: 8px;
 }
 
 
@@ -12,7 +14,7 @@
     }
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 800px) {
     .commands {
         -moz-column-count: 2;
         -webkit-column-count: 2;
@@ -20,7 +22,7 @@
     }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1100px) {
     .commands {
         -moz-column-count: 3;
         -webkit-column-count: 3;
@@ -28,7 +30,7 @@
     }
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1600px) {
     .commands {
         -moz-column-count: 4;
         -webkit-column-count: 4;
